[gd_scene load_steps=10 format=3 uid="uid://b24ke3d0cg0m0"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_1toev"]
[ext_resource type="PackedScene" uid="uid://c50iiq4sxym4c" path="res://Scenes/debug_screen.tscn" id="2_h67mq"]
[ext_resource type="PackedScene" uid="uid://c687wn3mmaoc8" path="res://Scenes/settings.tscn" id="3_ei7uj"]
[ext_resource type="Material" uid="uid://bubcarn5rvmqx" path="res://Textures/Material/PurpleGrid.tres" id="3_tv4py"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_swp7f"]
radius = 0.45

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n5607"]
radius = 0.45
height = 1.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y5t8c"]
material = ExtResource("3_tv4py")
radius = 0.45

[sub_resource type="CapsuleMesh" id="CapsuleMesh_48adj"]
material = ExtResource("3_tv4py")
radius = 0.45
height = 1.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ruvn3"]
albedo_color = Color(0, 0.639216, 0.0666667, 1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("crouching_mesh", "crouching_collision", "standing_mesh", "standing_collision", "ground_check", "ceiling_check", "neck", "head", "camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_1toev")
gravity = 22.0
crouching_mesh = NodePath("crouching")
crouching_collision = NodePath("CrouchingCollision")
standing_mesh = NodePath("standing")
standing_collision = NodePath("StandingCollision")
jump_force = 7.0
ground_check = NodePath("GroundCheck")
ceiling_check = NodePath("CeilingCheck")
neck = NodePath("Neck")
head = NodePath("Neck/Head")
camera = NodePath("Neck/Head/Camera3D")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_swp7f")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_n5607")
disabled = true

[node name="standing" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_y5t8c")

[node name="crouching" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
layers = 2
mesh = SubResource("CapsuleMesh_48adj")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.653, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head"]
cull_mask = 1048573
current = true
frustum_offset = Vector2(1, 1)

[node name="debug_screen" parent="Neck/Head/Camera3D" instance=ExtResource("2_h67mq")]

[node name="Settings" parent="Neck/Head/Camera3D" instance=ExtResource("3_ei7uj")]

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.506141)
layers = 2
radius = 0.01
height = 1.0
material = SubResource("StandardMaterial3D_ruvn3")

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67936, 0)
target_position = Vector3(0, -1.8, 0)

[node name="CeilingCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.371923, -0.657114)
radius = 0.005
height = 1.0
